[package]
name = "djsdocs"
version = "0.1.0"
authors = ["Vaporox"]
edition = "2021"
description = "Access discord.js docs from a terminal"
repository = "https://github.com/vaporox/djsdocs"
license = "ISC"

[dependencies]
regex = "1"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.serde]
version = "1"
features = ["derive"]
